style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');

body {
    font-family: Roboto, sans-serif;
    margin: 0;
    padding: 0;

    display:flex;
    flex-direction: column;
    justify-content: center;
}

body > * {
    padding-left: 10em;
    padding-right: 10em;
}

.header {
    background: #1F2937;
    color:#F9FAF8;
    display: flex;
    justify-content: space-between;
    padding-top: 1em;
    padding-bottom: 1em;
    max-width: 100%;
}

.logo {
    font-size: 24px;
    font-family: "Roboto";
    font-weight: 600;
}

ul.links {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-size: 18px;
    color: #E5E7EB;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
}

a {
    color: #F9FAF8;
    text-decoration: none;
}

.hero {
    background-color: #1F2937;
    padding-top: 5em;
    padding-bottom: 5em;
    color:#F9FAF8;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3em;
    
}

.hero-text .main {
    font-size: 48px;
    font-weight: bolder;
}

.hero-text .secondary {
    font-size: 18px;
    color: #E5E7EB;
    margin-bottom: 16px;
}

button {
    background-color: #3882F6;
    border: 1px solid #3882F6;
    border-radius: 8px;
    padding: 8px 32px;
    color:#F9FAF8;
    font-weight: bold;
    font-size: 18px;
    cursor: pointer;

    white-space: nowrap;
}

button:active {
    background-color: #156fff;
    border: 1px solid #156fff;
    
}

.placeholder {
    background-color: #6d747d;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 250px;
    width: 600px;
}

.info {
    text-align: center;
}

.info-title {
    font-size: 36px;
    font-weight: 500;
    margin: 48px;
}

.container {
    color:#1F2937;
    
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 24px;
    flex-wrap: wrap;

    padding-bottom: 6em;
}

.section {
    max-width: 180px;
}

.container img {
    border: 4px solid #3882F6;
    border-radius: 16px;
    height: 160px;
    width: auto;
}

.container .text {
    color: #3e4247;
}

.quote {
    background-color: #E5E7EB;
    color: #1F2937;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    padding-top: 8em;
    padding-bottom: 8em;
}

.quote .phrase {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
}

.quote .source {
    align-self: self-end;
    font-weight: bold;
    font-size: larger;
}

p {
    margin: 0;
    padding: 0;
}

.call {
    display: flex;
    justify-content: space-around;
    padding-top: 6em;
    padding-bottom: 6em;
}

.banner {
    background-color: #3882F6;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 64px;
    padding: 4em 8em;
    border-radius: 8px;
}

.banner .title {
    font-size: 24px;
    font-weight: bolder;
}

.banner p {
    color: #F9FAF8;
}

.banner button {
    border: 2px solid #F9FAF8;
}

.footer {
    background-color: #1F2937;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer p {
    color:#F9FAF8;
    padding: 3em 0;
}
/*
* {
    border: 1px dashed red;
}
*/

